# supernote-utils

./: .gitignore  PHASE1_COMPLETE.md  PR_DESCRIPTION.md  README.md  REFACTORING_PLAN.md  ROADMAP.md  note2pdf.py  note2text.py  pyproject.toml  requirements.txt  script2text.py  transcription_prompt.py
scripts/legacy/: note2pdf.py  note2text.py  script2text.py
supernote_utils/: __init__.py  __version__.py  config.py  exceptions.py
supernote_utils/cli/: __init__.py  list_models.py  main.py  note2pdf.py  note2text.py  script2text.py  transcribe.py
supernote_utils/core/: __init__.py  image_processor.py  prompts.py  transcriber.py
supernote_utils/note_format/: __init__.py  converter.py
supernote_utils/providers/: __init__.py  anthropic.py  base.py  google.py  ollama.py  openai.py
supernote_utils/sources/: __init__.py  factory.py  image.py  note.py  pdf.py
test/: test-transcribed.md  test.note  test_note2pdf.py  test_ollama_detection.py  test_transcription.py  test_transcription2.py
